[gd_scene load_steps=11 format=3 uid="uid://dmwdah80guhrt"]

[ext_resource type="Script" path="res://scripts/snake/game.gd" id="1_47eyt"]
[ext_resource type="PackedScene" uid="uid://xtxoqxqu3ycg" path="res://scenes/snake/food.tscn" id="2_g6khy"]
[ext_resource type="Texture2D" uid="uid://cr8rakanl4m66" path="res://assets/snake.png" id="3_djmin"]
[ext_resource type="PackedScene" uid="uid://bihvgleiqyjpt" path="res://scenes/snake/head.tscn" id="4_tohb1"]
[ext_resource type="Script" path="res://scripts/snake/head.gd" id="5_o0lut"]
[ext_resource type="PackedScene" uid="uid://bxpoy2277fyov" path="res://scenes/snake/segment.tscn" id="6_kmbdm"]
[ext_resource type="Theme" uid="uid://dlygxgt8hfakm" path="res://pixel_theme.tres" id="7_2roal"]
[ext_resource type="PackedScene" uid="uid://c2qpcf4un5wgv" path="res://scenes/game_control.tscn" id="9_bqhpl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aawv3"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1nujl"]
radius = 1.0

[node name="GameSnake" type="Node"]
script = ExtResource("1_47eyt")
snake_food_scene = ExtResource("2_g6khy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -426.0
offset_top = -243.0
offset_right = 424.0
offset_bottom = 266.0
color = Color(0.623529, 0.721569, 0.223529, 1)

[node name="Bounds" type="NinePatchRect" parent="."]
offset_left = -46.0
offset_top = -46.0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("3_djmin")
draw_center = false
region_rect = Rect2(16, 16, 4, 4)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="SnakeHead" parent="." node_paths=PackedStringArray("tail") instance=ExtResource("4_tohb1")]
position = Vector2(0, -4)
script = ExtResource("5_o0lut")
snake_segment_scene = ExtResource("6_kmbdm")
tail = NodePath("../Body")
head_close_region = Rect2(11, 1, 4, 4)
head_open_region = Rect2(11, 6, 4, 4)

[node name="Timer" type="Timer" parent="SnakeHead"]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="SnakeHead"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnakeHead/Area2D"]
shape = SubResource("CircleShape2D_aawv3")

[node name="Area2D2" type="Area2D" parent="SnakeHead"]
position = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnakeHead/Area2D2"]
shape = SubResource("CircleShape2D_1nujl")

[node name="Body" parent="." node_paths=PackedStringArray("next") instance=ExtResource("6_kmbdm")]
next = NodePath("../Tail")

[node name="Tail" parent="." instance=ExtResource("6_kmbdm")]
position = Vector2(0, 4)
animation = &"tail"

[node name="GameOverLabel" type="Label" parent="."]
offset_left = -27.0
offset_top = -75.0
offset_right = 27.0
offset_bottom = -52.0
theme = ExtResource("7_2roal")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Game over"

[node name="SnakeFood3" parent="." instance=ExtResource("2_g6khy")]
position = Vector2(0, -14)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -112.0
offset_top = -75.0
offset_right = -70.0
offset_bottom = -62.0
theme = ExtResource("7_2roal")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: "

[node name="ScoreLabelValue" type="Label" parent="."]
offset_left = -73.0
offset_top = -75.0
offset_right = -31.0
offset_bottom = -62.0
theme = ExtResource("7_2roal")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="Control" parent="." instance=ExtResource("9_bqhpl")]
offset_left = -192.0
offset_top = -108.0
offset_right = -191.664
offset_bottom = -109.024

[connection signal="food_collected" from="SnakeHead" to="." method="_on_snake_head_food_collected"]
[connection signal="self_collided" from="SnakeHead" to="." method="_on_snake_head_self_collided"]
[connection signal="timeout" from="SnakeHead/Timer" to="SnakeHead" method="_on_timer_timeout"]
[connection signal="area_entered" from="SnakeHead/Area2D" to="SnakeHead" method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="SnakeHead/Area2D2" to="SnakeHead" method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="SnakeHead/Area2D2" to="SnakeHead" method="_on_area_2d_2_area_exited"]
